--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 #root {
-    max-width: 1280px;
+    width: 100%;
+    height: 100vh;
     margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+}
+
+p, h1, h2, h3 {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #4f4f4f;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #FFFFFF;
+    font-size: 14px;
+    font-weight: 400;
 }
