edit styles, add repos info, add function select repo

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,3 +1,16 @@
 .table_container {
     max-width: 64%;
 }
+
+.table_header {
+    color: black;
+    padding: 24px 0 24px 16px
+}
+
+.main_container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
