--- a/src/index.scss
+++ b/src/index.scss
@@ -21,9 +21,10 @@ p, h1, h2, h3 {
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
     background-color: #FFFFFF;
     font-size: 14px;
     font-weight: 400;
 }
+
